<resources>
    <string name="app_name">MyLoginPage</string>
    <string name="name">이름</string>
    <string name="name_hint">이름을 입력하세요.</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="pw_hint">비밀번호를 입력하세요.</string>
    <string name="login">로그인</string>
    <string name="create">회원가입</string>
    <string name="quit">종료</string>
    <string name="age">나이</string>
    <string name="mbti">mbti</string>
    <string name="error_create">입력되지 않은 정보가 있습니다.</string>
</resources>